# ChangeLog for app-emulation/libvirt
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emulation/libvirt/ChangeLog,v 1.263 2013/05/06 14:51:36 cardoe Exp $

*libvirt-1.0.5 (06 May 2013)

  06 May 2013; Doug Goldstein <cardoe@gentoo.org> +libvirt-1.0.5.ebuild,
  +files/libvirt-1.0.5-sanitytest.py:
  Version bump for new upstream release.

*libvirt-1.0.4 (04 Apr 2013)

  04 Apr 2013; Doug Goldstein <cardoe@gentoo.org> +libvirt-1.0.4.ebuild:
  Version bump

  23 Mar 2013; Doug Goldstein <cardoe@gentoo.org> libvirt-9999.ebuild:
  Update the live ebuild with the fixes from recent releases.

  20 Mar 2013; Doug Goldstein <cardoe@gentoo.org> libvirt-1.0.3-r2.ebuild:
  Fix issue with location of sysctl.d file being installed to the correct path.

  20 Mar 2013; Doug Goldstein <cardoe@gentoo.org> -libvirt-1.0.3.ebuild:
  Remove older version

*libvirt-1.0.3-r2 (20 Mar 2013)

  20 Mar 2013; Doug Goldstein <cardoe@gentoo.org> +libvirt-1.0.3-r2.ebuild:
  Patches from the stable queue to fix a number of small outstanding issues and
  fix bug #455636

  14 Mar 2013; Doug Goldstein <cardoe@gentoo.org> libvirt-1.0.3-r1.ebuild:
  Update tarball because it was missing a patch

*libvirt-1.0.3-r1 (14 Mar 2013)

  14 Mar 2013; Doug Goldstein <cardoe@gentoo.org> +libvirt-1.0.3-r1.ebuild:
  Compile together a number of commits to fix user reported issues upstream

  07 Mar 2013; Doug Goldstein <cardoe@gentoo.org> libvirt-1.0.2-r2.ebuild:
  Backport USE=fuse to prevent automagical depend on sys-fs/fuse.

  07 Mar 2013; Doug Goldstein <cardoe@gentoo.org> -libvirt-0.10.2.1.ebuild,
  -libvirt-0.10.2.2.ebuild, -libvirt-1.0.1.ebuild:
  Remove older versions

  06 Mar 2013; Doug Goldstein <cardoe@gentoo.org> libvirt-1.0.3.ebuild,
  metadata.xml:
  Add USE=fuse for LXC containers.

*libvirt-1.0.3 (05 Mar 2013)

  05 Mar 2013; Doug Goldstein <cardoe@gentoo.org> +libvirt-1.0.3.ebuild: